--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -8,6 +8,12 @@
       type="image/jpeg"
       href="public\idTAadqrE__1757761844039.jpeg"
     />
+    <link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+/>
+
+
     <title>Zerodha Clone Dashboard - Dev-P</title>
   </head>
   <body>
